# BasicChatClient

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml
src/: main.cpp
src/client/: client_main.cpp  config.cpp  config.hpp  main.cpp  main.hpp  network.cpp  network.hpp  peer.cpp  peer.hpp
src/common/: message.cpp  message.hpp
src/tests/: client.py  client_config.json  tracker.py  tracker_config.json
src/tracker/: client.cpp  client.hpp  main.cpp  tracker.cpp  tracker.hpp  tracker_config.cpp  tracker_config.hpp
